--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@tinymce/tinymce-react": "^4.2.0",
     "axios": "^1.1.3",
+    "babel-loader": "^9.1.0",
     "bootstrap": "^5.2.2",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
