--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "draft-js": "^0.11.7",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
+    "react-animated-css-onscroll": "^1.2.1",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
