--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "mongoose": "^6.7.1",
     "moongoose": "^0.0.5",
     "node": "^19.0.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "react-animate-on-scroll": "^2.1.5",
+    "react-fade-in": "^2.0.1",
+    "react-transitions": "^1.0.0"
   }
 }
