--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemon": "^2.0.20",
     "react-animate-on-scroll": "^2.1.5",
     "react-fade-in": "^2.0.1",
+    "react-rss": "^2.0.1",
     "react-transitions": "^1.0.0"
   }
 }
