--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-xml-parser": "^1.1.8",
     "swiper": "^8.4.4",
     "web-vitals": "^2.1.4"
   },
