--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "express-xml-bodyparser": "^0.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^4.11.0",
     "mongoose": "^6.7.1",
@@ -28,6 +29,8 @@
     "react-fade-in": "^2.0.1",
     "react-rss": "^2.0.1",
     "react-transitions": "^1.0.0",
-    "react-xml-parser": "^1.1.8"
+    "react-xml-parser": "^1.1.8",
+    "xml2js": "^0.4.23",
+    "xml2json": "^0.12.0"
   }
 }
