--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-scripts": "5.0.1",
     "react-xml-parser": "^1.1.8",
     "swiper": "^8.4.4",
+    "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4",
     "xml-js": "^1.6.11"
   },
