--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5000/",
   "dependencies": {
+    "@emailjs/browser": "^3.9.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -30,6 +31,7 @@
     "react-type-animation": "^2.1.2",
     "react-typical": "^0.1.3",
     "react-xml-parser": "^1.1.8",
+    "sweetalert": "^2.1.2",
     "swiper": "^8.4.4",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4",
