--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
+    "react-elastic-carousel": "^0.11.5",
     "react-icons": "^4.6.0",
     "react-image-file-resizer": "^0.4.8",
     "react-loading": "^2.0.3",
@@ -30,6 +31,7 @@
     "react-type-animation": "^2.1.2",
     "react-typical": "^0.1.3",
     "react-xml-parser": "^1.1.8",
+    "styled-components": "^5.3.6",
     "swiper": "^8.4.4",
     "typewriter-effect": "^2.19.0",
     "web-vitals": "^2.1.4",
