--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "react-image-file-resizer": "^0.4.8",
     "react-loading": "^2.0.3",
     "react-quill": "^2.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.4.3",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
