--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "news",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:5000/",
+  "proxy":"https://www.hindustantimes.com/",
   "dependencies": {
     "@emailjs/browser": "^3.9.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
