--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "ejs": "^3.1.8",
@@ -29,8 +30,6 @@
     "react-fade-in": "^2.0.1",
     "react-rss": "^2.0.1",
     "react-transitions": "^1.0.0",
-    "react-xml-parser": "^1.1.8",
-    "xml2js": "^0.4.23",
-    "xml2json": "^0.12.0"
+    "xml-js": "^1.6.11"
   }
 }
