--- a/client/package.json
+++ b/client/package.json
@@ -2,8 +2,10 @@
   "name": "news",
   "version": "0.1.0",
   "private": true,
-  "proxy":"https://www.hindustantimes.com/",
+  "proxy": "https://www.hindustantimes.com/",
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^35.3.2",
+    "@ckeditor/ckeditor5-react": "^5.0.3",
     "@emailjs/browser": "^3.9.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
@@ -14,6 +16,7 @@
     "axios": "^1.1.3",
     "babel-loader": "^9.1.0",
     "bootstrap": "^5.2.2",
+    "ckeditor5-custom-build": "file:ckeditor5",
     "draft-js": "^0.11.7",
     "http-proxy-middleware": "^2.0.6",
     "react": "^18.2.0",
