--- a/client/ckeditor5/package.json
+++ b/client/ckeditor5/package.json
@@ -41,5 +41,9 @@
   },
   "scripts": {
     "build": "webpack --mode production"
+  },
+  "dependencies": {
+    "@ckeditor/ckeditor5-source-editing": "^35.3.2",
+    "ckeditor5-line-height-plugin": "^0.1.6"
   }
 }
