--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
     "react-elastic-carousel": "^0.11.5",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.6.0",
     "react-image-file-resizer": "^0.4.8",
     "react-loading": "^2.0.3",
@@ -40,6 +41,7 @@
     "sweetalert": "^2.1.2",
     "swiper": "^8.4.5",
     "typewriter-effect": "^2.19.0",
+    "validator": "^13.7.0",
     "web-vitals": "^2.1.4",
     "xml-js": "^1.6.11"
   },
