--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.2.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "deep-email-validator": "^0.1.21",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "express-xml-bodyparser": "^0.3.0",
