--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-icons": "^4.6.0",
     "react-image-file-resizer": "^0.4.8",
     "react-loading": "^2.0.3",
+    "react-player": "^2.11.0",
     "react-quill": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.4.3",
