--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-fade-in": "^2.0.1",
     "react-rss": "^2.0.1",
     "react-transitions": "^1.0.0",
+    "swiper": "^8.4.5",
     "xml-js": "^1.6.11"
   }
 }
