--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "deep-email-validator": "^0.1.21",
     "ejs": "^3.1.8",
+    "email-deep-validator": "^3.1.0",
     "express": "^4.18.2",
     "express-xml-bodyparser": "^0.3.0",
     "jsonwebtoken": "^8.5.1",
