--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "news",
   "version": "0.1.0",
   "private": true,
+  
   "proxy": "https://www.hindustantimes.com/",
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^35.3.2",
@@ -31,6 +32,7 @@
     "react-icons": "^4.6.0",
     "react-image-file-resizer": "^0.4.8",
     "react-loading": "^2.0.3",
+    "react-owl-carousel": "^2.3.3",
     "react-player": "^2.11.0",
     "react-quill": "^2.0.0",
     "react-responsive-carousel": "^3.2.23",
